deploy static contract
