# routes/deployContracts.js
@@ -9,48 +9,70 @@ var logger = log4js.getLogger('smartcontract');
 var web3 = new Web3(new Web3.providers.HttpProvider(obj.ethereumUri));
 const  solc  =  require('solc');
 
-var content = fs.readFileSync("./contracts/vote.sol").toString();
-var input = {
-  language: 'Solidity',
-  sources: {
-    ["./contracts/vote.sol"]: {
-      content: content
-    }
-  },
-  settings: {
-    outputSelection: {
-      '*': {
-        '*': ['*']
+
+
+
+router.post('/deployContract', (req, res, next) => {
+
+  console.log(req);
+    var content = fs.readFileSync("./contracts/vote.sol").toString();
+    var input = {
+      language: 'Solidity',
+      sources: {
+        ["./contracts/vote.sol"]: {
+          content: content
+        }
+      },
+      settings: {
+        outputSelection: {
+          '*': {
+            '*': ['*']
+          }
+        }
       }
     }
-  }
+    
+    var compiled = solc.compile(JSON.stringify(input));
+    var output = JSON.parse(compiled);
+    
+  //  console.log(output);
+    
+    var abi = output.contracts["./contracts/vote.sol"]['FoodSafe'].abi;
+     var bytecode ='0x'+ output.contracts[["./contracts/vote.sol"]]['FoodSafe'].evm.bytecode.object;
+     //console.log(bytecode);
+     var HelloWorld = web3.eth.contract(abi);
+    
+     var food= HelloWorld.new(
+       {
+    from : req.body.accountAddress,
+    data:bytecode,
+    gas:'6800000'
+    
+       },function (err, contract){
+         if(err)
+         {
+          res.status(err.status || 500).json({status: err.status, message: err.message})
+          // console.log(err)
+         }
+         else{
+if(contract.address==undefined || contract.address==null)
+{
+  setTimeout(function() {
+		console.log("waiting for resonse")
+	}, 100)
 }
-
-var compiled = solc.compile(JSON.stringify(input));
-var output = JSON.parse(compiled);
-var abi = output.contracts["./contracts/vote.sol"]['FoodSafe'].abi;
- var bytecode ='0x'+ output.contracts[["./contracts/vote.sol"]]['FoodSafe'].evm.bytecode.object;
- //console.log(bytecode);
- var HelloWorld = web3.eth.contract(abi);
-
-//  var food= HelloWorld.new(
-//    {
-// from : "0x3c558787478d4a4ff38c7765f45eccd7a5396878",
-// data:bytecode,
-// gas:'21000'
-
-//    },function (err, contract){
-//      if(err)
-//      {
-//        console.log(err)
-//      }
-//      else{
-
+else{
+  res.status(200).json({transactionHash : contract.transactionHash, contractAddress : contract.address})
+}
+         
+          
      
-//     console.log(contract);
-//      }
-//    });
-//   console.log(food);
- 
-//console.log(food);
+    
+         }
+       });
+    
+  
+
+});
+  //console.log(food);
 module.exports=router; 
